affectation zone ordre automatique
